fixed contrast on home #57

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -131,9 +131,9 @@ h1 span{
   position:absolute;
   text-align:center;
   margin:auto;
-  top:0; 
-  left:0; 
-  bottom:0; 
+  top:0;
+  left:0;
+  bottom:0;
   right:0;
   width:500px;
   height:225px;
@@ -446,7 +446,7 @@ h1 span{
 }
 
 
-.about-us .column-three{ 
+.about-us .column-three{
   margin-top:40px;
   width:300px;
   float:left;
@@ -454,7 +454,7 @@ h1 span{
   height:350px;
 }
 
-.about-us .column-three .circle-three{ 
+.about-us .column-three .circle-three{
   height: 174px;
   position:relative;
   margin:0 auto;
@@ -472,7 +472,7 @@ h1 span{
   transition: all 0.2s ease-in;
 }
 
-.about-us .column-three .circle-three:hover{ 
+.about-us .column-three .circle-three:hover{
   background: url(../stylesheets/img/icons/professor.png) #2fa68e no-repeat center center;
 }
 
@@ -556,6 +556,8 @@ h1 span{
   float: left;
   position: relative;
   overflow: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .grid li:nth-child(2n){
@@ -579,7 +581,7 @@ h1 span{
   text-align:center;
   margin-top:80px;
   font-weight: bold;
-  color: #FFF;
+  color: white;
 }
 
 .grid p.description {
@@ -588,11 +590,11 @@ h1 span{
   margin-top:20px;
   text-align:center;
   font-weight: 400;
-  color: #FFF;
+  color: black;
 }
 
-.clear { 
-    clear:both; 
+.clear {
+    clear:both;
 }
 
 
@@ -601,8 +603,8 @@ h1 span{
 .contact{
   position:relative;
   width:900px;
-  margin: 0 auto;  
-  
+  margin: 0 auto;
+
 }
 
 .contact h1{
@@ -628,8 +630,8 @@ h1 span{
   position:relative;
   width:900px;
   overflow:hidden;
-  margin: 60px 0 65px 0;  
-  
+  margin: 60px 0 65px 0;
+
 }
 
 
@@ -731,4 +733,3 @@ strong{
   padding-right:25px;
   color:#5f666e;
 }
-
